--- a/relatorio-parcial/main.tex
+++ b/relatorio-parcial/main.tex
@@ -52,7 +52,7 @@ A fim de reduzir o tempo de execução, utilizaremos a análise de frequência d
 
 \section{Casos de teste de corretude e desempenho}
 \begin{itemize}
-    \item \textbf{Corretude:} A fim de atestar a corretude, escolhemos 5 palavras arbitrárias e faremos o MD5 hash de cada uma delas. Usando a string que representa o hash como entrada, o programa deve retornar a string representando a palavra original como representadas abaixo:
+    \item \textbf{Corretude:} A fim de atestar a corretude, escolhemos 5 palavras arbitrárias e faremos o MD5 hash de cada uma delas. Usando a string que representa o hash como entrada, o programa deve retornar a string representando a palavra original como explicitadas abaixo:
     \begin{center}
     \begin{tabular}{ |c|c| } 
      \hline
