feat: DRE e possibilidade de uso de CUDA

--- a/relatorio-parcial/main.tex
+++ b/relatorio-parcial/main.tex
@@ -19,7 +19,7 @@
   \texttt{DRE:123375522}
   \and
   Pedro Freitas de Moura\\
-  \texttt{DRE: XXXXXXXXXX}
+  \texttt{DRE: 123126096}
   \and
   Rafael Oliveira Chaffin\\
   \texttt{XXXXXXXXXXXX}
@@ -69,6 +69,7 @@ A fim de reduzir o tempo de execução, utilizaremos a análise de frequência d
     \end{center}
 
         \item \textbf{Desempenho:} Para verificar o desempenho, utilizaremos a mesma entrada para o programa sequencial, o concorrente sem a análise de frequência do trabalho de Mark Veiner e o concorrente implementando a análise. Faremos o mesmo teste repetidas vezes para as mesmas entradas e faremos a média do tempo de execução.
+        \item \textbf{Uso de CUDA:} REVER SE IREMOS FAZER: Também iremos comparar o uso de CUDA, e no final iremos comparar o uso de tempo sem threads concorrentes, threads concorrentes somente de uma CPU, e o uso de threads de uma GPU.
 \end{itemize}
 
 \begin{thebibliography}{9}
