--- a/relatorio-final/main.tex
+++ b/relatorio-final/main.tex
@@ -376,7 +376,7 @@ Todos os 3 casos de teste de corretude foram executados com sucesso nas três ve
  \hline
 \end{tabular}
 \end{center}
-A senha "flamengo" foi testada na mesma máquina que utilizamos para executar os testes CUDA. Ele foi o único que teve 
+*A senha "flamengo" foi testada na mesma máquina que utilizamos para executar os testes CUDA. Infelizmente tivemos uma grande demora para a execução sequencial da senha e não conseguimos medir.
 
 \textbf{Calculando as métricas de desempenho:}
 
@@ -408,7 +408,7 @@ O principal desafio continua sendo o vasto espaço de busca. Em relação ao rel
 Além desse imenso desafio combinatório, também enfrentamos dificuldades técnicas na implementação do CUDA. Descobrimos que a execução, por conta dos drivers da NVIDIA, era facilitada em ambiente Windows, o que gerou dificuldade para a utilização dessa versão em sistemas Linux. 
 
 \subsubsection{Análise de Frequência}
-Devido ao limite computacional , optamos por não utilizar a analise de frequencia ja que iria aumentaria substancialmente o tempo de execução de um único teste. e o nosso objetivo é comparar a execução sequencial com a concorrente demonstrando o ganho
+Devido ao limite computacional , optamos por não utilizar a analise de frequencia já que iria aumentaria substancialmente o tempo de execução de um único teste.E o nosso objetivo é comparar a execução sequencial com a concorrente demonstrando o ganho de velocidade.
 \section{Conclusões}
 
 
